test/deprecated/warning-halt-s.chpl
warning(s="warning message");
halt(s="halt message");
